Changelog
=========

2.1.6 (unreleased)
------------------

- Nothing changed yet.


2.1.5 (2015-03-11)
------------------

- Ported tests to plone.app.testing


2.1.4 (2014-09-08)
------------------

- archetypes.schemaextender assumes presence of getRaw method which
  ComputedField does not provide
  https://dev.plone.org/ticket/11315
  [anthonygerrard]

2.1.3 (2014-02-26)
------------------

- Fix tests [kiorky]

2.1.2 (2013-01-13)
------------------

- PEP8 changes, documentation updates.
  [maurits]

2.1.1 - 2011-07-04
------------------

* Acquire request object via local site hook if object is not
  acquisition-wrapped (in ``cachingInstanceSchemaFactory``). This
  fixes caching issues with objects rendered using DTML. Note that
  this is likely a bug in the ``DocumentTemplate`` code. Ideally, the
  issue should be resolved there.
  [malthe]

2.1 - 2011-01-03
----------------

* Use plone.uuid to look up content UUIDs.
  [toutpt, davisagli]

* Added example of how to use ordered extenders and browser layer aware
  extenders.
  [miohtama]

2.0.3 - 2010-07-07
------------------

* Added back the ``caching.zcml`` file, but have it load ``configure.zcml``.
  This makes it easier to write Plone 3 / 4 compatible code.
  [hannosch]

* Factored out the condition to disable the cache during tests into a module
  global variable called ``CACHE_ENABLED``.
  [hannosch]

2.0.2 - 2010-06-13
------------------

* Changed the schema cache again, to use the id() only as a fallback when there
  is not yet an UID assigned. The id() is unstable with Acquisition wrappers
  and ZODB level ghosting of objects. We provide an explicit API for disabling
  the cache instead.
  [hannosch]

* Avoid deprecation warnings under Zope 2.13.
  [hannosch]

* Change the schema cache key to avoid an issue during content migration when
  there might be two objects that have the same UID but different schemata.
  Now concatenating the Python id() with the UID (id() alone isn't good enough,